add input event

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://unpkg.com/vue@2.5.17/dist/vue.js"></script>
     
     <div id="app">
+        <input type="text" v-on:input="changeTitle" />
         <p>{{ title }}</p>
     </div>
 
