--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="app">
         <input type="text" v-on:input="changeTitle" />
         <p>{{ title }}</p>
+        <p>{{ sayHello() }}</p>
     </div>
     
 </body>
