add v-once example

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div id="app">
+        <h1 v-once>{{ title }}</h1>
         <input type="text" v-on:input="changeTitle" />
-        <p>{{ title }}</p>
-        <p>{{ sayHello() }}</p>
+        <p>{{ sayHello() }} - <a v-bind:href="link">Google</a></p>
     </div>
     
 </body>
