add raw html handling

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <h1 v-once>{{ title }}</h1>
         <input type="text" v-on:input="changeTitle" />
         <p>{{ sayHello() }} - <a v-bind:href="link">Google</a></p>
+        <br>
+        <p v-html="finishedLink"></p>
+        </div>
     </div>
     
 </body>
