--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
         <p>{{ sayHello() }} - <a v-bind:href="link">Google</a></p>
         <br>
         <p v-html="finishedLink"></p>
+    </div>
+    </div>
+    <hr>
+    <div id="exercise">
+        <p>VueJS is pretty cool - {{ name }} ({{ age }})</p>
+        
+        <p>{{ age * 3 }}</p>
+        <p> {{ getRandomNumber() }}</p>
+        <div>
+            <img v-bind:src="myImage" style="width:100px;height:100px">
+        </div>
+        <div>
+            <input type="text" v-bind:value="name">
         </div>
     </div>
-    
+
 </body>
 <script src="./index.js"></script>
 
